:bug: Add z-index property to submenus to avoid get covered by other elements (#3)

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -38,6 +38,7 @@ ul.navbar-submenu {
   top: 60px;
   background-color: #3c3c3c;
   width: 160px;
+  z-index: 5;
 }
 
 ul.navbar-submenu > li {
